# A1

./: .gitignore  GPU_001.pyw
.github/workflows/: build-direct2d-renderer.yml
Direct2DRenderer/: CMakeLists.txt  GPUpdfTIF.contract.txt  GpuPdfRenderer.contract.txt  README.md
Direct2DRenderer/src/: main.cpp  tif_main.cpp
